tests/error/compile/group_unterminated.wks
# @desc: Unterminated @group is rejected

# @expect-error: Unterminated @group block

@group "Open" {
    a "cmd" +write %{{echo a}}
